--- a/action.yml
+++ b/action.yml
@@ -588,3 +588,15 @@ runs:
         ref: ${{ env.PRIVATE_SARIF_REF }}
         sha: ${{ env.PRIVATE_SARIF_SHA }}
         token: ${{ inputs.sarif-token || inputs.GITHUB_TOKEN }}
+    - name: dump-sarif
+      if: (success() || (failure() && env.MERGE_FAILED != '1')) && (github.run_attempt > 1 || env.ACT) && env.UPLOAD_SARIF_LIMITED != ''
+      shell: bash
+      run: |
+        (
+          echo '<details><summary>sarif file</summary>'
+          echo
+          echo '```'
+          cat "$UPLOAD_SARIF_LIMITED"
+          echo '```'
+          echo '</details>'
+        ) >> "$GITHUB_STEP_SUMMARY"
