test: Let github actions expand outputs
Using `${{ }}` inside `run:` fields is a bad idea, it's safer to provide
`${{ }}` as an `env:` value and then ask the shell to use the
environment variable.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,13 +41,15 @@ jobs:
     - name: test
       id: test
       shell: bash
+      env:
+        required_perl_modules: ${{ steps.perl-config.outputs.perl-modules }}
       run: |
         extra_bin=~/.extra-bin
         mkdir -p "$extra_bin"
         PATH="$extra_bin:$PATH"
         (
           cpan_modules=$(
-            for module in ${{ steps.perl-config.outputs.perl-modules }}; do
+            for module in $required_perl_modules; do
               perl -e "use $module; 1;" > /dev/null 2>/dev/null || echo $module
             done | xargs
           )
