--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
           Module::Build::Tiny
           Devel::Cover
           Devel::Cover::Report::Html
-          IO::Capture::Stderr
+          Capture::Tiny
           Hash::Merge
           Text::Hunspell
           " |sort|xargs)"
