--- a/action.yml
+++ b/action.yml
@@ -562,6 +562,7 @@ runs:
         cd "${{ inputs.experimental_path }}"
         git reset "$PRIVATE_SARIF_SHA"
     - name: artifact-sarif
+      continue-on-error: true
       id: artifact-sarif-replacement
       if: (success() || (failure() && env.MERGE_FAILED != '1')) && env.UPLOAD_SARIF != '' && env.replace_v4_actions_upload_artifact
       uses: check-spelling/actions-upload-artifact@v4
@@ -572,6 +573,7 @@ runs:
         path: |
           ${{ env.UPLOAD_SARIF }}
     - name: artifact-sarif
+      continue-on-error: true
       id: artifact-sarif
       if: (success() || (failure() && env.MERGE_FAILED != '1')) && env.UPLOAD_SARIF != '' && !env.replace_v4_actions_upload_artifact
       uses: actions/upload-artifact@v4
@@ -582,6 +584,7 @@ runs:
         path: |
           ${{ env.UPLOAD_SARIF }}
     - name: upload-sarif
+      continue-on-error: true
       id: upload-sarif-replacement
       if: (success() || (failure() && env.MERGE_FAILED != '1')) && env.UPLOAD_SARIF_LIMITED != '' && env.replace_v3_github_codeql_action
       uses: check-spelling/github-codeql-action/upload-sarif@v3
@@ -594,6 +597,7 @@ runs:
         sha: ${{ env.PRIVATE_SARIF_SHA }}
         token: ${{ inputs.sarif-token || inputs.GITHUB_TOKEN }}
     - name: upload-sarif
+      continue-on-error: true
       id: upload-sarif
       if: (success() || (failure() && env.MERGE_FAILED != '1')) && env.UPLOAD_SARIF_LIMITED != '' && !env.replace_v3_github_codeql_action
       uses: github/codeql-action/upload-sarif@v3
@@ -606,6 +610,7 @@ runs:
         sha: ${{ env.PRIVATE_SARIF_SHA }}
         token: ${{ inputs.sarif-token || inputs.GITHUB_TOKEN }}
     - name: dump-sarif
+      continue-on-error: true
       if: (success() || (failure() && env.MERGE_FAILED != '1')) && (github.run_attempt > 1 || env.ACT) && env.UPLOAD_SARIF_LIMITED != ''
       shell: bash
       run: |
@@ -619,6 +624,7 @@ runs:
           echo '</details>'
         ) >> "$GITHUB_STEP_SUMMARY"
     - name: act-step-summary
+      continue-on-error: true
       if: (success() || failure()) && env.ACT_STEP_SUMMARY
       shell: bash
       run: |
