--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -115,9 +115,11 @@ jobs:
       id: coverage
       if: success() || failure()
       run: |
-        perl `command -v cover` -report html
+        perl `command -v cover` -ignore /usr/bin/shasum -report html
         if [ -e cover_db/coverage.html ]; then
-          t/html-to-markdown.pl cover_db/coverage.html >> "$GITHUB_STEP_SUMMARY"
+          (
+            t/html-to-markdown.pl cover_db/coverage.html
+          ) >> "$GITHUB_STEP_SUMMARY"
         fi
         echo 'ran=1' >> "$GITHUB_OUTPUT"
     - name: store-coverage
