action: Configure unrecognized words collapse limit
We wonder if it might be better to use `0` instead of `10`.

At least initially, I do not intend to change the current behavior.

This tunable will allow consumers to experiment.

--- a/action.yml
+++ b/action.yml
@@ -295,6 +295,10 @@ inputs:
     description: 'Report processing time for files'
     required: false
     default: ""
+  unrecognized-words-before-collapsing:
+    description: 'Control how many unrecognized words can be displayed without wrapping in a collapsed widget'
+    required: false
+    default: 10
 
 outputs:
   unknown_words:
