--- a/action.yml
+++ b/action.yml
@@ -299,6 +299,9 @@ inputs:
     description: 'Control how many unrecognized words can be displayed without wrapping in a collapsed widget'
     required: false
     default: 10
+  sarif-token:
+    description: "Token for use with github/codeql-action/upload-sarif"
+    required: false
 
 outputs:
   unknown_words:
@@ -535,6 +538,7 @@ runs:
         checkout_path: ${{ inputs.experimental_path }}
         ref: ${{ env.PRIVATE_SARIF_REF }}
         sha: ${{ env.PRIVATE_SARIF_SHA }}
+        token: ${{ inputs.sarif-token || inputs.GITHUB_TOKEN }}
     - name: upload-sarif
       id: upload-sarif
       if: (success() || (failure() && env.MERGE_FAILED != '1')) && env.UPLOAD_SARIF != '' && !env.replace_v3_github_codeql_action
@@ -546,3 +550,4 @@ runs:
         checkout_path: ${{ inputs.experimental_path }}
         ref: ${{ env.PRIVATE_SARIF_REF }}
         sha: ${{ env.PRIVATE_SARIF_SHA }}
+        token: ${{ inputs.sarif-token || inputs.GITHUB_TOKEN }}
