action: Limit commit history to commit messages
Generally check-spelling is at most interested in commit messages.

There might be modes where it also cares about blame, but that's even
rarer.

--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -98,6 +98,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: ${{ !contains(env.workflow_check_commit_messages, 'commits') && '1' || '0' }}
+          filter: ${{ contains(env.workflow_check_commit_messages, 'commits') && 'tree:0' || '' }}
       - name: test-clean
         shell: bash
         run: |
