--- a/action.yml
+++ b/action.yml
@@ -382,9 +382,34 @@ runs:
         : Set up alternate engine
         echo "repo=$(echo '${{ inputs.alternate_engine }}' | perl -pe 's/\@.*//')" >> "$GITHUB_OUTPUT"
         echo "branch=$(echo '${{ inputs.alternate_engine }}' | perl -ne 'next unless s/.*\@//; print')" >> "$GITHUB_OUTPUT"
+    - name: shim
+      shell: bash
+      run: |
+        : Shim path and local actions
+        THIS_ACTION_PATH=$(realpath "$GITHUB_ACTION_PATH")
+        echo "THIS_ACTION_PATH=$THIS_ACTION_PATH" >> "$GITHUB_ENV"
+        mkdir -p .git/
+        if ! ln -s "$THIS_ACTION_PATH"/actions .git/check-spelling-actions; then
+          mkdir -p .git/check-spelling-actions
+          rsync --delete -a "$THIS_ACTION_PATH"/actions/ .git/check-spelling-actions/
+          echo "USE_RSYNC_FOR_LOCAL_CHECK_SPELLING_ACTIONS=1" >> "$GITHUB_ENV"
+        fi
+        echo "$THIS_ACTION_PATH/wrappers" >> "$GITHUB_PATH"
+        echo "THIS_GITHUB_JOB_ID=$THIS_GITHUB_JOB_ID" >> "$GITHUB_ENV"
+      env:
+        THIS_GITHUB_JOB_ID: ${{ github.job }}
+    - name: check-actions
+      id: check-actions
+      env:
+        spellchecker: ${{ env.THIS_ACTION_PATH }}
+        GH_ACTION_REPOSITORY: ${{ github.action_repository || github.repository }}
+        GH_ACTION_REF: ${{ github.action_ref || github.ref_name }}
+      shell: bash
+      run: |
+        secpoll
     - name: alternate-engine
       if: inputs.alternate_engine
-      uses: actions/checkout@v4
+      uses: ./.git/check-spelling-actions/checkout
       with:
         show-progress: false
         path: alternate-engine
@@ -398,50 +423,22 @@ runs:
       run: |
         : Install alternate engine
         rsync --delete --exclude=.git -a alternate-engine/ "$GITHUB_ACTION_PATH"/
+        rsync --delete -a alternate-engine/actions/ ./.git/check-spelling-actions/
         rm -rf alternate-engine/
-    - name: shim-path
+    - name: check-actions (for alternate engine)
+      if: inputs.alternate_engine
+      id: alternate-check-actions
       shell: bash
-      run: |
-        : Shim path
-        THIS_ACTION_PATH=$(realpath "$GITHUB_ACTION_PATH")
-        echo "THIS_ACTION_PATH=$THIS_ACTION_PATH" >> "$GITHUB_ENV"
-        echo "$THIS_ACTION_PATH/wrappers" >> "$GITHUB_PATH"
-        echo "THIS_GITHUB_JOB_ID=$THIS_GITHUB_JOB_ID" >> "$GITHUB_ENV"
-      env:
-        THIS_GITHUB_JOB_ID: ${{ github.job }}
-    - name: check-actions
-      id: check-actions
       env:
         spellchecker: ${{ env.THIS_ACTION_PATH }}
         GH_ACTION_REPOSITORY: ${{ github.action_repository || github.repository }}
         GH_ACTION_REF: ${{ github.action_ref || github.ref_name }}
       run: |
         secpoll
-      shell: bash
-    - name: checkout
-      id: checkout-replacement
-      continue-on-error: true
-      if: inputs.checkout && inputs.checkout != 'false' && !inputs.custom_task && env.replace_v4_actions_checkout
-      uses: check-spelling/actions-checkout@v4
-      with:
-        show-progress: false
-        path: ${{ inputs.experimental_path }}
-        ssh-key: ${{ inputs.ssh_key }}
-        fetch-depth: ${{ !contains(inputs.check_commit_messages, 'commits') && '1' || '0' }}
-        filter: ${{ contains(inputs.check_commit_messages, 'commits') && 'tree:0' || '' }}
-        token: ${{ inputs.checkout-token || inputs.GITHUB_TOKEN }}
-        ref:
-          ${{
-            github.event_name == 'issue_comment' &&
-            github.event.issue.pull_request &&
-            github.event.pull_request.head.sha ||
-            ''
-          }}
     - name: checkout
       id: checkout
-      continue-on-error: true
-      if: inputs.checkout && inputs.checkout != 'false' && !inputs.custom_task && !env.replace_v4_actions_checkout
-      uses: actions/checkout@v4
+      if: inputs.checkout && inputs.checkout != 'false' && !inputs.custom_task
+      uses: ./.git/check-spelling-actions/checkout
       with:
         show-progress: false
         path: ${{ inputs.experimental_path }}
@@ -457,7 +454,7 @@ runs:
             ''
           }}
     - name: report if checkout failed
-      if: steps.checkout-replacement.outcome == 'failure' || steps.checkout.outcome == 'failure'
+      if: steps.checkout.outcome == 'failure'
       shell: bash
       env:
         spellchecker: ${{ env.THIS_ACTION_PATH }}
@@ -469,7 +466,7 @@ runs:
     - name: checkout-merge
       id: checkout-merge
       if: github.event.pull_request.number && (contains(github.event_name, 'pull_request')) && (inputs.checkout && inputs.checkout != 'false' && !inputs.custom_task && !inputs.task)
-      uses: check-spelling/checkout-merge@v0.0.6
+      uses: ./.git/check-spelling-actions/checkout-merge
       with:
         path: ${{ inputs.experimental_path }}
     - name: save sha
@@ -488,11 +485,11 @@ runs:
         fi
     - name: prepare
       if: inputs.task && inputs.task != 'spelling' && (!env.ACT || github.token)
+      shell: bash
       run: |
         : Set up internal state directory
         mkdir -p /tmp/data;
         echo "INPUT_INTERNAL_STATE_DIRECTORY=/tmp/data" >> "$GITHUB_ENV"
-      shell: bash
     - name: retrieve-comment
       id: retrieve-comment
       if: inputs.task && inputs.task != 'spelling' && (!env.ACT || github.token)
@@ -534,30 +531,16 @@ runs:
         spellchecker: ${{ env.THIS_ACTION_PATH }}
         GH_ACTION_REPOSITORY: ${{ github.action_repository || github.repository }}
         GH_ACTION_REF: ${{ github.action_ref || github.ref_name }}
+      shell: bash
       run: |
         unknown-words
-      shell: bash
-    - name: store-comment-replacement
-      if: (contains(github.event_name, 'pull_request') ||
-        github.event_name == 'push') &&
-        inputs.custom_task != 'comment' &&
-        ((failure() && env.MERGE_FAILED != '1') || steps.spelling.outputs.followup) &&
-        steps.spelling.outputs.internal_state_directory &&
-        env.replace_v4_actions_upload_artifact
-      uses: check-spelling/actions-upload-artifact@v4
-      with:
-        name: |
-          ${{ inputs.report_title_suffix && format('{0}-{1}', 'check-spelling-comment', inputs.report_title_suffix) || 'check-spelling-comment' }}
-        path: |
-          ${{ steps.spelling.outputs.internal_state_directory }}
     - name: store-comment
       if: (contains(github.event_name, 'pull_request') ||
         github.event_name == 'push') &&
         inputs.custom_task != 'comment' &&
         ((failure() && env.MERGE_FAILED != '1') || steps.spelling.outputs.followup) &&
-        steps.spelling.outputs.internal_state_directory &&
-        (!env.replace_v4_actions_upload_artifact)
-      uses: actions/upload-artifact@v4
+        steps.spelling.outputs.internal_state_directory
+      uses: ./.git/check-spelling-actions/upload-artifact
       with:
         name:
           ${{ inputs.report_title_suffix && format('{0}-{1}', 'check-spelling-comment', inputs.report_title_suffix) || 'check-spelling-comment' }}
@@ -572,43 +555,17 @@ runs:
         cd "${{ inputs.experimental_path }}"
         git reset "$PRIVATE_SARIF_SHA"
     - name: artifact-sarif
-      continue-on-error: true
-      id: artifact-sarif-replacement
-      if: (success() || (failure() && env.MERGE_FAILED != '1')) && env.UPLOAD_SARIF != '' && env.replace_v4_actions_upload_artifact
-      uses: check-spelling/actions-upload-artifact@v4
-      with:
-        name: |
-          ${{ inputs.report_title_suffix && format('{0}-{1}', 'check-spelling-sarif', inputs.report_title_suffix) || 'check-spelling-sarif' }}
-        retention-days: 1
-        path: |
-          ${{ env.UPLOAD_SARIF }}
-    - name: artifact-sarif
-      continue-on-error: true
       id: artifact-sarif
-      if: (success() || (failure() && env.MERGE_FAILED != '1')) && env.UPLOAD_SARIF != '' && !env.replace_v4_actions_upload_artifact
-      uses: actions/upload-artifact@v4
+      if: (success() || (failure() && env.MERGE_FAILED != '1')) && env.UPLOAD_SARIF != ''
+      uses: ./.git/check-spelling-actions/upload-artifact
       with:
         name: ${{ inputs.report_title_suffix && format('{0}-{1}', 'check-spelling-sarif', inputs.report_title_suffix) || 'check-spelling-sarif' }}
         retention-days: 1
         path: ${{ env.UPLOAD_SARIF }}
     - name: upload-sarif
-      continue-on-error: true
-      id: upload-sarif-replacement
-      if: (success() || (failure() && env.MERGE_FAILED != '1')) && env.UPLOAD_SARIF_LIMITED != '' && env.replace_v3_github_codeql_action
-      uses: check-spelling/github-codeql-action/upload-sarif@v3
-      with:
-        wait-for-processing: ${{ inputs.wait-for-sarif-processing != '' && inputs.wait-for-sarif-processing || 'false' }}
-        sarif_file: ${{ env.UPLOAD_SARIF_LIMITED }}
-        category: ${{ inputs.report_title_suffix && format('{0}-{1}', 'check-spelling', inputs.report_title_suffix) || 'check-spelling' }}
-        checkout_path: ${{ inputs.experimental_path }}
-        ref: ${{ env.PRIVATE_SARIF_REF }}
-        sha: ${{ env.PRIVATE_SARIF_SHA }}
-        token: ${{ inputs.sarif-token || inputs.GITHUB_TOKEN }}
-    - name: upload-sarif
-      continue-on-error: true
       id: upload-sarif
       if: (success() || (failure() && env.MERGE_FAILED != '1')) && env.UPLOAD_SARIF_LIMITED != '' && env.PRIVATE_SARIF_REF && env.PRIVATE_SARIF_SHA
-      uses: github/codeql-action/upload-sarif@v3
+      uses: ./.git/check-spelling-actions/upload-sarif
       with:
         wait-for-processing: ${{ inputs.wait-for-sarif-processing != '' && inputs.wait-for-sarif-processing || 'false' }}
         sarif_file: ${{ env.UPLOAD_SARIF_LIMITED }}
